--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,18 @@
 ---
-layout: default
+layout: default-color
 active: projects
 ---
 
-<div>
-    Projects
-</div>
+<!doctype html>
+<html lang="en-us">
+    {%- include head.html -%}
+    <body>
+        <div>
+            <div class="absolute bottom-0 left-0 h-160 w-full bg-amber-50/90 skew-y-[-3deg] -z-10 -top-60"></div>
+            {%- include nav.html -%}
+            <div class="container mx-auto px-4 max-w-6xl">
+                <div class="pt-12 pb-24 mb-36">
+                    <h1 class="text-5xl font-bold mb-6">Projects</h1>
+                    <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
+                </div>
+            </div>
