--- a/stash.html
+++ b/stash.html
@@ -1,20 +1,27 @@
 ---
-layout: default
+layout: default-color
 active: stash
 ---
 
-<div class="container mx-auto px-4 max-w-6xl">
-<div class="py-24 mb-12">
-    <h1 class="text-5xl font-bold mb-6">Stash</h1>
-    <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
-</div>
-    <div class="columns-3 gap-4 w-full">
-
-        {% for stash in site.stash %}
-        <a class="block mb-4 border rounded-lg hover:border-slate-400 hover:bg-slate-50 duration-200" href="{{ stash.url }}">
-            <img loading="lazy" class="rounded-lg" src="{{ stash.image }}">
-        </a>
-        {% endfor %}
-
-    </div>
-</div>
+<!doctype html>
+<html lang="en-us">
+    {%- include head.html -%}
+    <body>
+        <div>
+            <div class="absolute bottom-0 left-0 h-160 w-full bg-purple-50/90 skew-y-[-3deg] -z-10 -top-60"></div>
+            {%- include nav.html -%}
+            <div class="container mx-auto px-4 max-w-6xl">
+                <div class="pt-12 pb-24 mb-36">
+                    <h1 class="text-5xl font-bold mb-6">Stash</h1>
+                    <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
+                </div>
+                <div class="columns-3 gap-4 w-full">
+            
+                    {% for stash in site.stash %}
+                    <a class="block mb-4 border rounded-lg hover:border-slate-400 hover:bg-slate-50 duration-200" href="{{ stash.url }}">
+                        <img loading="lazy" class="rounded-lg" src="{{ stash.image }}">
+                    </a>
+                    {% endfor %}
+            
+                </div>
+            </div>
