--- a/tools.html
+++ b/tools.html
@@ -1,22 +1,27 @@
 ---
-layout: default
+layout: default-color
 active: tools
 ---
 
-<div class="container mx-auto px-4 max-w-6xl">
-    <div class="py-24 mb-12">
-        <h1 class="text-5xl font-bold mb-6">Personal Tool Stack</h1>
-        <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
-    </div>
-    <div class="grid grid-cols-4 gap-4">
-
-        {% for tool in site.tools %}
-        <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="{{ tool.url }}">
-            <div>{{ tool.image-html }}</div>
-            <h4 class="text-xl mt-10">{{ tool.title }}</h4>
-            <p class="mt-4">{{ tool.summary }}</p>
-        </a>
-        {% endfor %}
-
-    </div>
-</div>
+<!doctype html>
+<html lang="en-us">
+    {%- include head.html -%}
+    <body>
+        <div>
+            <div class="absolute bottom-0 left-0 h-160 w-full bg-emerald-50/90 skew-y-[-3deg] -z-10 -top-60"></div>
+            {%- include nav.html -%}
+            <div class="container mx-auto px-4 max-w-6xl">
+                <div class="pt-12 pb-24 mb-36">
+                    <h1 class="text-5xl font-bold mb-6">Tool Stack</h1>
+                    <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
+                </div>
+                <div class="grid grid-cols-4 gap-4">
+                    {% for tool in site.tools %}
+                    <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="{{ tool.url }}">
+                        <div>{{ tool.image-html }}</div>
+                        <h4 class="text-xl mt-10">{{ tool.title }}</h4>
+                        <p class="mt-4">{{ tool.summary }}</p>
+                    </a>
+                    {% endfor %}
+                </div>
+            </div>
